Fixed problems with wrong sizes in visual effects, improved main visual effects demo.
git-svn-id: http://svn.mochikit.com/mochikit/trunk@1383 14cb8549-11fe-0310-83a5-45f3e82da484

--- a/examples/effects/effects_combi.css
+++ b/examples/effects/effects_combi.css
@@ -8,27 +8,11 @@ h3 {
     margin-bottom: 10px;
     width: 120px;
     height: 120px;
-    background-color: #AAAAAA;
+	border: 1px solid #669;
+    background-color: #ccf;
     text-align: center;
     padding: 1em 0.2em 0.2em 0.2em;
 }
 .demo {
     clear: both;
 }
-#reset {
-    position: absolute;
-    top: 600px;
-    left: 600px;
-}
-#demo-all {
-    position: absolute;
-    top: 600px;
-    left: 400px;
-    font-size: 1.0em;
-    width: 120px;
-    height: 120px;
-    background-color: #AAAAAA;
-    text-align: center;
-    padding: 1em 0.2em 0.2em 0.2em;
-}
-
